--- a/idex.html
+++ b/idex.html
@@ -52,7 +52,7 @@
       const h2 = parseFloat(document.getElementById("h2").value);
       const useLinear = document.getElementById("linear").checked;
       
-      const file = useLinear ? "data/lookup_linear.csv" : "data/lookup_detailed.csv";
+      const file = useLinear ? "data/lookup_linear.csv" : "data/T130FlameProps.csv";
       
       loadCSV(file, function(data) {
         const res = interpolate(data, P, T, phi, h2);
