--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h2>Flame Properties Calculator</h2>
   
-  <label>Pressure [atm]: <input id="P" type="number" value="1" step="1"></label><br>
-  <label>Temperature [K]: <input id="T" type="number" value="300" step="50"></label><br>
+  <label>Pressure [psi]: <input id="P" type="number" value="1" step="1"></label><br>
+  <label>Temperature [F]: <input id="T" type="number" value="300" step="50"></label><br>
   <label>Equivalence Ratio φ: <input id="phi" type="number" value="1.0" step="0.1"></label><br>
   <label>H₂ Fraction: <input id="h2" type="number" value="0.5" step="0.1" min="0" max="1"></label><br>
 
